# pants-microservices

./: .gitignore  Makefile  README.md  pants.toml
src/protos/: BUILD
src/protos/helloworld/: BUILD
src/protos/helloworld/v1/: BUILD
src/protos/microservice_client_helloworld/v1/: BUILD  helloworld.proto
src/protos/microservices_helloworld/v1/: BUILD  helloworld.proto
src/python/microservice-client/: BUILD  pyproject.toml.txt
src/python/microservice-client/microservice_client/: BUILD  main.py
src/python/microservices/: BUILD  Dockerfile  pyproject.toml  pyproject.toml.txt
src/python/microservices/microservices/: BUILD  main.py
src/python/microservices/microservices/config/: BUILD  config.yml  container.py
src/python/microservices/microservices/controller/: greeter_servicer.py  helloworld_servicer.py
src/python/microservices/microservices/usecase/: greeter_usecase.py
src/python/microservices/tests/: test_a.py
