[tool.poetry]
name = "microservices"
version = "0.1.0"
description = ""
authors = ["pecolynx <pecolynx@gmail.com>"]
readme = "README.md"
packages = [{include = "microservices"}]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.59.0"
protobuf = "^4.24.4"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
